--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="file:///Users/student/Documents/CSP%20Projects/Index.html/index%20html">Home</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/css/abouut/about.html">about</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/pictures.html">Pictures</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/css/clicker%20html">Count Clicker</a></li>
+  <a class="active" href="index.html">Home</a></li>
+  <a href="about.html">about</a></li>
+  <a href="Pictures.html">Pictures</a></li>
+  <a href="Clicker.html">Count Clicker</a></li>
 </div>
 
 <div style="padding-left:20px">
