--- a/clicker.html
+++ b/clicker.html
@@ -38,10 +38,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a class="active" href="file:///Users/student/Documents/CSP%20Projects/Index.html/index%20html">Home</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/css/abouut/about.html">about</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/pictures.html">Pictures</a></li>
-  <a href="file:///Users/student/Documents/CSP%20Projects/Index.html/css/clicker%20html">Count Clicker</a></li>
+  <a class="active" href="Index.html">Home</a></li>
+  <a href="about.html">about</a></li>
+  <a href="pictures.html">Pictures</a></li>
+  <a href="clicker.html">Count Clicker</a></li>
 </div>
 
 <div style="padding-left:20px">
